style.css
/* ... */
	
.entry-content .alignright,
img[align="right"] {
	float: right;
	margin: 0 0 4px 8px;
	display: block;
	}

.entry-content .alignleft,
img[align="left"] {
	float: left;
	margin: 0 8px 4px 0;
	display: block;
	}
	
a[rel~="attachment"] img,
.gallery a img,
.wp-caption {
	background-color: #F3F3F3;
	border: 1px solid #ddd;
	padding: 3px;
	text-align: center;
	border-radius: 3px;
	-moz-border-radius: 3px;
	-webkit-border-radius: 3px;
	}

a[rel~="attachment"] img:hover,
.gallery a img:hover,
.wp-caption:hover {
	padding: 2px;
	border: 2px solid #27d;
	}

.wp-caption a img,
.wp-caption a img:hover {
	padding: 4px 0px 0px;
	border: 0 none;
	}

.wp-caption .wp-caption-text {
	margin: 4px 0 2px;
	}

.smallcaps {
	font-variant: small-caps;
	}

abbr[title],
acronym[title] {
	cursor: help;
	}

abbr.entry-date {
	cursor: inherit;
	}

small {
	font-size: 0.9em;
	line-height: 1.5em;
	}

small, strike {
	color: #777;
	}
	
code {
	font-size: 1.1em;
	}

blockquote {
	margin: 20px 0;
	padding: 0 20px 0 50px;
	color: #333;
	background: url('images/quote.png') no-repeat 10px 0;
	border: none;
	}

hr {
	display: none;
	}

body.smartposition #nav-above {
	position: fixed;
	top: 0px;
	background: #fff;
	border-bottom: 1px solid #eee;
	width: 500px;
	margin: 0;
	padding: 10px 0;
	z-index: 10;
	}

.navigation {
	text-align: center;
	margin: 10px 0;
	padding: 0;
	width: 100%;
	}

.comments .navigation {
	margin: 20px 0;
	}

.navigation .nav-previous,
.navigation .left {
	float: left;
	width: 50%;
	text-align: left;
	}

.navigation .nav-next,
.navigation .right {
	float: right;
	width: 50%;
	text-align: right;
	}

.navigation a {
	color: #999;
	}

.alert {
	background: #FFF6BF;
	text-align: center;
	margin: 10px auto;
	padding: 4px 20px;
	}

img.wp-smiley {
	border: none !important;
	padding: 0 0 0 5px !important;
	}


/* Lists */

.archive-list {
	list-style: none;
	margin: 10px 0 0 0 !important;
	padding-left: 0px !important;
	}

.archive-list li {
	display: block;
	float: left;
	margin: 0 10px 0 0 !important;
	padding: 2px 0 2px 10px !important;
	width: 150px;
	}

.archive-list li:hover {
	background-color: #EDEDED;
	}

.entry-content ol, .entry-content ul {
	padding: 0 0 0 35px;
	}

.entry-content ol li, .entry-content ul li {
	margin: 0 0 3px;
	padding: 0;
	}

.secondary div p {
	margin-top: 0.5em;
	}

.secondary ul, .secondary ol {
	margin: 5px 0 0;
	padding-left: 0;
	}

.secondary ul ul, .secondary ol ol {
	margin: 0 0 0 10px;
	}
       
.secondary ul ul ul, .secondary ol ol ol {
	margin: 0 0 0 20px;
	}


.secondary ol {
	margin-left: 15px;
	}

.secondary ul li, .secondary ol li {
	margin: 0;
	padding: 1px 0;
	}
	
.secondary ul li {
	list-style-type: none;
	list-style-image: none;
	}

.sb-links ul li {
	margin-top: 20px;
	}

.sb-links ul ul {
	margin-left: 0px;
	}

.sb-links ul ul li {
	margin-top: 0;
	}


/* Search Form and Livesearch */

.widget_search {
	margin-top: 20px;
	}

.widget_search h4 {
	display: none;
	}

#search-form-wrap.livesearch {
	position: relative;
	height: 2.0em;
	}

input[type=text], textarea {
	color: #444;
	padding: 1px;
	margin: 0;
	}

#s {
	width: 100%;
	font-size: 1.1em;
	margin: 4px 0px;
	border-radius: 2px;
	-moz-border-radius: 2px;
	-webkit-border-radius: 2px;
	border: 1px solid #bbb;
	padding: 4px;
	}

.livesearch #s {
	position: absolute;
	top: 0px;
	left: 0px;
	margin: 0px;
	z-index: 2;
	background: transparent;
	padding-right: 20px;
	width: 175px;
	}

body.columns-three .livesearch #s {
	width: 150px;
	}

#searchreset, #searchload {
	position: absolute;
	top: 2px;
	z-index: 2;
	}

#searchreset {
	right: 3px;
	height: 19px;
	width: 16px;
	background: url('images/reset-fff.png') center center no-repeat;
	}

#searchload {
	right: 1px;
	height: 18px;
	width: 18px;
	background: url('images/spinner.gif') center center no-repeat;
	}

label.overlabel-apply {
	position: absolute;
	top: 4px;
	left: 6px;
	z-index: 1;
	color: #999;
	cursor: text;
	font-size: 1.1em;
	}

label.overlabel-apply.fade {
	color: #ccc;
	}

/* Attachment */

.entry-content .attachment { 
	text-align: center; 
	}


/* Rolling Archives */

#rollingarchives { /* AJAX-powered navigation hub */
	top: 0;
	height: 45px;
	display: block;
	width: 500px;
	border-bottom: none;
	}

body.smartposition #dynamic-content {
	padding-top: 45px;
}

body.smartposition #dynamic-content.onepageonly {
	padding-top: 0;
}

body.smartposition #rollingarchives { /* .smartposition is added to BODY with JS when #dynamic-content passes the top of the window */
	position: fixed;
	background: #fff;
	border-bottom: 1px solid #eee;
	z-index: 1000;
	}

#dynamic-content { /* Contains both the RA nav and content, and is used for as a top marker for the smartposition */
	position: relative;
}

#rollingarchives a:hover {
	text-decoration: underline;
	}

#rollnavigation a:active, #rollnavigation a:focus {
	outline: none;
	}

#rollprevious,
#rollnext,
#rollload,
#rollhome,
#rollpages,
#rolldates,
#texttrimmer {
	position: absolute;
	top: 17px;
	}

#rollprevious:hover,
#rollnext:hover,
#rollhome:hover {
	text-decoration: underline;
	cursor: pointer;
	}

#rollhome {
	display: none;
	left: 54px;
	background: url('images/house.png') no-repeat center center;
	width: 16px;
	height: 16px;
	}

#rollload {
	background: url('images/spinner.gif') no-repeat center center;
	top: 16px;
	left: 50%;
	margin-left: -8px;
	width: 16px;
	height: 16px;
	}

#rollload span,
#rollhome span {
	display: none;
	}

#rollnext,
#rollprevious {
	color: #666;
	font-weight: bold;
	}

#rollpages {
	left: 55px;
	color: #aaa;
	}

#rollhover {
	position: absolute;
	top: 7px;
	left: -47px;
	z-index: 100;
	height: 45px;
	background: url('images/rollhover.png') no-repeat center top;
	}

#rollhover,
#rolldates {
	width: 100px;
	}

#rollhover {
	top: 8px;
	}

#rolldates {
	position: absolute;
	color: #999;
	text-align: center;
	font-size: .9em;
	top: 22px;
	margin: 0;
	}

#rollprevious {
	left: 0;
	text-align: left;
	}

#rollnext {
	right: 0;
	text-align: right;
	}
/* ... */

